--- a/public/index.html
+++ b/public/index.html
@@ -201,6 +201,29 @@
                   </header>
                 <!-- end of header -->
                 
+                <!-- data container -->
+                <div class="data-button">
+                    <button type="button" class="btn btn-outline-secondary">
+                      <span class="text-wrap">Unresolved</span>
+                      <br />
+                      <span class="fs-1 fw-bold">60</span>
+                    </button>
+                    <button type="button" class="btn btn-outline-primary">
+                      <span class="text-wrap">Overdue</span>
+                      <br />
+                      <span class="fs-1 fw-bold">16</span>
+                    </button>
+                    <button type="button" class="btn btn-outline-secondary">
+                      <span class="text-wrap">Open</span>
+                      <br />
+                      <span class="fs-1 fw-bold">43</span>
+                    </button>
+                    <button type="button" class="btn btn-outline-secondary">
+                      <span class="text-wrap">On Hold</span>
+                      <br />
+                      <span class="fs-1 fw-bold">64</span>
+                    </button>
+                  </div>
             </div>
         </div>   
   </div>
