data commit updated

--- a/public/index.html
+++ b/public/index.html
@@ -202,23 +202,23 @@
                 <!-- end of header -->
                 
                 <!-- data container -->
-                <div class="data-button">
-                    <button type="button" class="btn btn-outline-secondary">
+                <div class="data-button  row">
+                    <button type="button" class="btn btn-outline-secondary col mx-2">
                       <span class="text-wrap">Unresolved</span>
                       <br />
                       <span class="fs-1 fw-bold">60</span>
                     </button>
-                    <button type="button" class="btn btn-outline-primary">
+                    <button type="button" class="btn btn-outline-primary col mx-2">
                       <span class="text-wrap">Overdue</span>
                       <br />
                       <span class="fs-1 fw-bold">16</span>
                     </button>
-                    <button type="button" class="btn btn-outline-secondary">
+                    <button type="button" class="btn btn-outline-secondary col mx-2">
                       <span class="text-wrap">Open</span>
                       <br />
                       <span class="fs-1 fw-bold">43</span>
                     </button>
-                    <button type="button" class="btn btn-outline-secondary">
+                    <button type="button" class="btn btn-outline-secondary col mx-2">
                       <span class="text-wrap">On Hold</span>
                       <br />
                       <span class="fs-1 fw-bold">64</span>
