--- a/public/index.html
+++ b/public/index.html
@@ -164,21 +164,17 @@
 
                         </div>
                         <!-- end of sidebar -->
-
-
-
-
                     </div>
-
                 </div>
-
             </div>
+
+
             <!-- "Overview" section -->
             <div class="col-md-9 col-xl-10">
                 <div class="col py-3">
 
                     <!-- overview header -->
-                    <header class="p-3 mb-3">
+                    <header class="header p-3 mb-3">
                         <div class="container">
                             <div
                                 class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
@@ -222,24 +218,24 @@
                     <!-- end of header -->
 
                     <!-- data container -->
-                    <div class="data-button  row py-3 px-3">
-                        <button type="button" class="btn btn-outline-secondary col mx-3">
-                            <span class="text-wrap">Unresolved</span>
+                    <div class="data-container data-button  row py-3 px-3">
+                        <button type="button" class="card btn btn-outline-secondary col mx-3">
+                            <span class="card-text text-wrap">Unresolved</span>
                             <br />
                             <span class="fs-1 fw-bold">60</span>
                         </button>
-                        <button type="button" class="btn btn-outline-primary col mx-3">
-                            <span class="text-wrap">Overdue</span>
+                        <button type="button" class="blue-card btn btn-outline-primary col mx-3">
+                            <span class="card-text text-wrap">Overdue</span>
                             <br />
                             <span class="fs-1 fw-bold">16</span>
                         </button>
-                        <button type="button" class="btn btn-outline-secondary col mx-3">
-                            <span class="text-wrap">Open</span>
+                        <button type="button" class="card btn btn-outline-secondary col mx-3">
+                            <span class="card-text text-wrap">Open</span>
                             <br />
                             <span class="fs-1 fw-bold">43</span>
                         </button>
-                        <button type="button" class="btn btn-outline-secondary col mx-3">
-                            <span class="text-wrap">On Hold</span>
+                        <button type="button" class="card btn btn-outline-secondary col mx-3">
+                            <span class="card-text text-wrap">On Hold</span>
                             <br />
                             <span class="fs-1 fw-bold">64</span>
                         </button>
@@ -369,7 +365,7 @@
                     <div class="col">2</div>
                 </div>
                 <!--end of bottom section-->
-
+            
             </div>
         </div>
     </div>
