--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bootstrap assignment</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com%22%3E/">
-    <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Mulish&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200..1000;1,200..1000&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
@@ -24,7 +24,7 @@
             <div class="col-md-3 col-xl-2 px-0">
                 <div class="d-flex flex-column align-items-center align-items-md-start custom-sidebar-bg">
                     <div class="p-3 min-vh-100">
-                        <div class="dashboard-side-nav">
+                        <div class="dashboard-side-nav display: flex; flex-direction: column; align-items: center; align-items: md-start;">
                             <div class="row">
                                 <div class="col-2">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32"
@@ -49,21 +49,14 @@
                         </div>
                         <!-- elements position -->
 
-                        <div id="d-flex align-items-center">
-                            <div class="overview items-sidebar d-flex align-items-center">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16"
-                                    fill="none" style="margin-right: 15px;" alt="overview icon">
+                        <div >
+                            <div class="overview items-sidebar " style="position: absolute; color: #DDE2FF; font-weight: 400;">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16" fill="none" style="margin-right: 15px;" alt="overview icon">
                                     <g clip-path="url(#clip0_584_253)">
-                                        <path
-                                            d="M15.5232 8.94116H8.54412L13.1921 13.5891C13.3697 13.7667 13.6621 13.7812 13.8447 13.6091C14.9829 12.5367 15.7659 11.0912 15.9956 9.46616C16.035 9.18793 15.8041 8.94116 15.5232 8.94116ZM15.0576 7.03528C14.8153 3.52176 12.0076 0.714119 8.49412 0.471767C8.22589 0.453237 8 0.679413 8 0.948236V7.5294H14.5815C14.8503 7.5294 15.0762 7.30352 15.0576 7.03528ZM6.58824 8.94116V1.96206C6.58824 1.68118 6.34147 1.45029 6.06353 1.48971C2.55853 1.985 -0.120585 5.04705 0.00412089 8.71675C0.132356 12.4856 3.37736 15.5761 7.14794 15.5288C8.6303 15.5103 10 15.0326 11.1262 14.2338C11.3585 14.0691 11.3738 13.727 11.1724 13.5256L6.58824 8.94116Z"
-                                            fill="#DDE2FF" />
+                                        <path d="M15.5232 8.94116H8.54412L13.1921 13.5891C13.3697 13.7667 13.6621 13.7812 13.8447 13.6091C14.9829 12.5367 15.7659 11.0912 15.9956 9.46616C16.035 9.18793 15.8041 8.94116 15.5232 8.94116ZM15.0576 7.03528C14.8153 3.52176 12.0076 0.714119 8.49412 0.471767C8.22589 0.453237 8 0.679413 8 0.948236V7.5294H14.5815C14.8503 7.5294 15.0762 7.30352 15.0576 7.03528ZM6.58824 8.94116V1.96206C6.58824 1.68118 6.34147 1.45029 6.06353 1.48971C2.55853 1.985 -0.120585 5.04705 0.00412089 8.71675C0.132356 12.4856 3.37736 15.5761 7.14794 15.5288C8.6303 15.5103 10 15.0326 11.1262 14.2338C11.3585 14.0691 11.3738 13.727 11.1724 13.5256L6.58824 8.94116Z" fill="#DDE2FF" />
                                     </g>
-
                                 </svg>
-                                <div class="col d-none d-md-block">
-                                    <div>Overview</div>
-                                </div>
-
+                                <div>Overview</div>
                             </div>
 
                             <div id="tickets">
@@ -179,7 +172,6 @@
                             <div
                                 class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
 
-
                                 <ul id="overview-title"
                                     class="nav col-11 col-lg-auto me-lg-auto mb-1 justify-content-center mb-md-0">
                                     <p>Overview</p>
@@ -195,7 +187,7 @@
 
                                     </svg>
                                 </div>
-                                <div id="IconNotificationsNew">
+                                <div >
                                     <svg xmlns="http://www.w3.org/2000/svg" width="18" height="19">
                                         <path
                                             d="M7.99999 19C9.10374 19 9.99905 18.1047 9.99905 17H6.00093C6.00093 18.1047 6.89624 19 7.99999 19ZM14.7309 14.3216C14.1272 13.6728 12.9975 12.6969 12.9975 9.5C12.9975 7.07188 11.295 5.12812 8.99937 4.65125V4C8.99937 3.44781 8.55187 3 7.99999 3C7.44812 3 7.00062 3.44781 7.00062 4V4.65125C4.70499 5.12812 3.00249 7.07188 3.00249 9.5C3.00249 12.6969 1.8728 13.6728 1.26905 14.3216C1.08155 14.5231 0.998429 14.7641 0.999991 15C1.00343 15.5125 1.40562 16 2.00312 16H13.9969C14.5944 16 14.9969 15.5125 15 15C15.0016 14.7641 14.9184 14.5228 14.7309 14.3216Z"
@@ -203,6 +195,12 @@
                                         <circle cx="13" cy="5" r="3.75" fill="#3751FF" stroke="#F7F8FC"
                                             stroke-width="1.5" />
                                     </svg>
+                                </div>
+                                <div 
+                                    style="height: 32px; left: 1290px; position: absolute">
+                                    <div 
+                                        style="height: 32px;  border: 1px #DFE0EB solid">
+                                    </div>
                                 </div>
                                 <div id="James-Name">
                                     Jones Ferdinand
@@ -222,7 +220,7 @@
                         <button type="button" class="card btn btn-outline-secondary col mx-3">
                             <span class="card-text text-wrap">Unresolved</span>
                             <br />
-                            <span class="fs-1 fw-bold">60</span>
+                            <span class="fs-1 fw-bold" style="font-weight: 700;">60</span>
                         </button>
                         <button type="button" class="blue-card btn btn-outline-primary col mx-3">
                             <span class="card-text text-wrap">Overdue</span>
@@ -245,13 +243,13 @@
                     <!--chart -->
                     <div class="chart-container py-3 px-3">
                         <div class="row">
-                            <div class="col-md-6">
-                                <div class="row">
+                            <div class="col-md-6" style="display: flex;">
+                                <div class="row" >
                                     <div class="col-md-12">
-                                        <div class="Chart">
-                                            <div class="Chart-header">
-                                                <h1>Today's Trends</h1>
-                                                <p style="color: grey;">As of 25 May 2019, 09:41 PM</p>
+                                        <div class="Chart" >
+                                            <div class="Chart-header position-absolute top:32px; ">
+                                                <h1 class="number fw-bold" style="font-size: 19px;">Today's Trends</h1>
+                                                <p style="font-size: 12px; color: grey;">As of 25 May 2019, 09:41 PM</p>
                                             </div>
                                             <div class="Chart-body">
                                                 <div class="Chart-content">
@@ -274,14 +272,14 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-md-6 text-center">
+                            <div class="col-md-6 text-center" style="display: flex; flex-direction: column; justify-content: space-between;">
                                 <div class="row">
                                     <div class="col-md-12">
                                         <div class="Chart">
                                             <div class="Chart-header">
                                                 <span class="text-wrap" style="color: grey;">Resolved</span>
                                                 <br/>
-                                                <span class="fs-1 fw-bold">449</span>
+                                                <span class="number fw-bold">449</span>
                                             </div>
                                             <div class="Chart-body">
                                                 <div class="Chart-content">
@@ -296,7 +294,7 @@
                                             <div class="Chart-header">
                                                 <span class="text-wrap" style="color: grey;">Received</span>
                                                 <br />
-                                                <span class="fs-1 fw-bold">426</span>
+                                                <span class="number fw-bold">426</span>
                                             </div>
                                             <div class="Chart-body">
                                                 <div class="Chart-content">
@@ -312,7 +310,7 @@
                                                 <span class="text-wrap" style="color: grey;">Average first response
                                                     time</span>
                                                 <br />
-                                                <span class="fs-1 fw-bold">33m</span>
+                                                <span class="number fw-bold">33m</span>
                                             </div>
                                             <div class="Chart-body">
                                                 <div class="Chart-content">
@@ -328,7 +326,7 @@
                                                 <span class="text-wrap" style="color: grey;">Average response
                                                     time</span>
                                                 <br />
-                                                <span class="fs-1 fw-bold">3h 8m</span>
+                                                <span class="number fw-bold">3h 8m</span>
                                             </div>
                                             <div class="Chart-body">
                                                 <div class="Chart-content">
@@ -344,7 +342,7 @@
                                                 <span class="text-wrap" style="color: grey;">Resolution within
                                                     SLA</span>
                                                 <br />
-                                                <span class="fs-1 fw-bold">94%</span>
+                                                <span class="number fw-bold">94%</span>
                                             </div>
                                         </div>
                                         <div class="Chart-body">
@@ -360,32 +358,32 @@
                 <!--end of chart -->
 
                 <!--Data table-->
-                <div class="bottom-container">
+                <div class="bottom-container" style="font-family: Mulish;">
                     <div class="row">
                         <div class="col-md-6">
                             <!-- Left Table -->
-                            <div class="container py-2 px-2">
+                            <div class="left-containter container py-2 px-2">
                                 <div class="row">
-                                    <div class="col-8 p-3"><span class="fs-4 fw-bold">Unresolved tickets</span></br>
+                                    <div class="col-8 p-3"><span class="fs-4 fw-bold" >Unresolved tickets</span></br>
                                         <span class="text-secondary"><span class="table_number fs-6">Group:</span> Support</span>
                                     </div>
                                     <div class="col-2 p-3 text-primary"><button type="button"
-                                            class="btn btn-link btn-sm">View details</button></div>
+                                            class="btn btn-link btn-sm" style="color: #3751FF; text-decoration:none;">View details</button></div>
                                 </div>
                                 <div class="row">
-                                    <div class="col-8 p-3">Waiting on Feature Request</div>
+                                    <div class="col-8 p-3" style="font-size: 14px; font-weight: 600;">Waiting on Feature Request</div>
                                     <div class="col-2 p-3"><span class="table_number">4238</span></div>
                                 </div>
                                 <div class="row">
-                                    <div class="col-8 p-3">Awaiting Customer Response</div>
+                                    <div class="col-8 p-3" style="font-size: 14px; font-weight: 600;">Awaiting Customer Response</div>
                                     <div class="col-2 p-3"><span class="table_number">1005</span></div>
                                 </div>
                                 <div class="row">
-                                    <div class="col-8 p-3">Awaiting Developer Fix</div>
+                                    <div class="col-8 p-3" style="font-size: 14px; font-weight: 600;">Awaiting Developer Fix</div>
                                     <div class="col-2 p-3"><span class="table_number">914</span></div>
                                 </div>
                                 <div class="row">
-                                    <div class="col-8 p-3">Pending</div>
+                                    <div class="col-8 p-3" style="font-size: 14px; font-weight: 600;">Pending</div>
                                     <div class="col-2 p-3"><span class="table_number">281</span></div>
                                 </div>
                             </div>
@@ -396,16 +394,20 @@
                             <div class="container py-2 px-2">
                                 <div class="row">
                                     <div class="col-8 p-3"><span class="fs-4 fw-bold">Task</span></br>
-                                        <span class="table_number fs-6">Today</span> 
+                                        <span class="table_number fs-6 " style="font-size: 14px; font-weight: 600;">Today</span> 
                                     </div>
                                     <div class="col-2 p-3 text-primary"><button type="button"
-                                            class="btn btn-link btn-sm">View all</button></div>
+                                            class="btn btn-link btn-sm" style="color: #3751FF; text-decoration:none;">View all</button></div>
                                 </div>
                                 <div class="row">
                                     <div class="col-8 p-3"><span class="text-secondary">Create new task</span></div>
                                     <div class="col-2 p-3">
                                         <div class="btn-group-toggle" data-toggle="buttons">
-                                            <label class="btn btn-secondary active">+</label>
+                                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+                                                <rect width="24" height="24" rx="8" fill="#F0F1F7" />
+                                                <path d="M12 7V17" stroke="#9FA2B4" stroke-width="2" stroke-linecap="round" />
+                                                <path d="M17 12L7 12" stroke="#9FA2B4" stroke-width="2" stroke-linecap="round" />
+                                            </svg>
                                         </div>
                                     </div>
                                 </div>
@@ -415,7 +417,7 @@
                                             <input type="checkbox" class="rounded-checkbox checkbox"
                                                 id="checkbox1" /><label for="checkbox1"></label>
                                         </div>
-                                        <label for="checkbox1" class="label-text">Finish ticket update</label>
+                                        <label for="checkbox1" class="label-text" style="font-size: 14px; font-weight: 600;">Finish ticket update</label>
                                     </div>
                                     <div class="col-2 p-3"><button type="button"
                                             class="btn btn-warning btn-sm text-white">URGENT</button></div>
@@ -426,7 +428,7 @@
                                             <input type="checkbox" class="rounded-checkbox" id="checkbox2" /> <label
                                                 for="checkbox2"></label>
                                         </div>
-                                        <label for="checkbox2" class="label-text">Create new ticket example</label>
+                                        <label for="checkbox2" class="label-text" style="font-size: 14px; font-weight: 600;">Create new ticket example</label>
                                     </div>
                                     <div class="col-2 p-3"><button type="button"
                                             class="btn btn-success btn-sm">NEW</button></div>
@@ -437,10 +439,10 @@
                                             <input type="checkbox" class="rounded-checkbox" id="checkbox3" /> <label
                                                 for="checkbox3"></label>
                                         </div>
-                                        <label for="checkbox3" class="label-text">Update ticket report</label>
+                                        <label for="checkbox3" class="label-text" style="font-size: 14px; font-weight: 600;">Update ticket report</label>
                                     </div>
                                     <div class="col-2 p-3"><button type="button"
-                                            class="btn btn-light btn-sm text-secondary">DEFAULT</button></div>
+                                            class="btn btn-light btn-sm text-secondary" style="font-size: 11px; font-weight: 700; text-align: center; color: #9FA2B4;">DEFAULT</button></div>
                                 </div>
                             </div>
                             <!--end of Right Table-->
